--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.19.5",
     "gatsby-plugin-feed": "^2.3.26",
+    "gatsby-plugin-matomo": "^0.8.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "react": "^16.12.0",
